refactor verbal and quant

--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -25,11 +25,7 @@
                 <div class="exam-info">
                   <div>练习人数: <%= top.user_count %></div>
                   <div>
-                    <span>平均错题数: </span>
-                    <span>Verbal <%= top.avg_num_of_wrong_verbal_exercises.nan? ? '-' : top.avg_num_of_wrong_verbal_exercises %></span>
-                    <% if top.exam_type_label == '770' %>
-                      <span>Quant <%= top.avg_num_of_wrong_quant_exercises.nan? ? '-' : top.avg_num_of_wrong_quant_exercises %></span>
-                    <% end -%>
+                    <%= render partial: 'exams/exam_stats', locals: { exam: top } %>
                   </div>
                 </div>
               </div>
@@ -51,11 +47,7 @@
                 <div class="exam-info">
                   <div>练习人数: <%= exam.user_count %></div>
                   <div>
-                    <span>平均错题数: </span>
-                    <span>Verbal <%= exam.avg_num_of_wrong_verbal_exercises.nan? ? '-' : exam.avg_num_of_wrong_verbal_exercises %></span>
-                    <% if exam.exam_type_label == '770' %>
-                      <span>Quant <%= exam.avg_num_of_wrong_quant_exercises.nan? ? '-' : exam.avg_num_of_wrong_quant_exercises %></span>
-                    <% end -%>
+                    <%= render partial: 'exams/exam_stats', locals: { exam: exam } %>
                   </div>
                 </div>
               </div>
@@ -79,11 +71,7 @@
                 <div class="exam-info">
                   <div>练习人数: <%= exam.user_count %></div>
                   <div>
-                    <span>平均错题数: </span>
-                    <span>Verbal <%= exam.avg_num_of_wrong_verbal_exercises.nan? ? '-' : exam.avg_num_of_wrong_verbal_exercises %></span>
-                    <% if exam.exam_type_label == '770' %>
-                      <span>Quant <%= exam.avg_num_of_wrong_quant_exercises.nan? ? '-' : exam.avg_num_of_wrong_quant_exercises %></span>
-                    <% end -%>
+                    <%= render partial: 'exams/exam_stats', locals: { exam: exam } %>
                   </div>
                 </div>
               </div>
