--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -53,10 +53,10 @@
   <table cellspacing="0" cellpadding="10" class="meeting-categories-table">
     <thead>
       <th>全部课程</th>
-      <th colspan="2">770Elite系列∙线上小班直播</th>
-      <th>挑战700+|训练营</th>
-      <th>770福利∙免费</th>
-      <th>770线下面授</th>
+      <th colspan="2">770Elite | GMAT单项小班</th>
+      <th>700训练营 | 百题斩</th>
+      <th>770福利 | 免费</th>
+      <th>770线下 | 面授</th>
     </thead>
     <tbody>
       <tr>
@@ -65,8 +65,8 @@
           <label><input type="radio" name="calendar-category" value="2"> Elite∙逻辑突破</label>
         </td>
         <td style="background-color: #58a128"><label><input type="radio" name="calendar-category" value="9"> Elite∙阅读提升</label></td>
-        <td style="background-color:#7231A6"><label><input type="radio" name="calendar-category" value="3"> 挑战700+|逻辑</label></td>
-        <td style="background-color: #999"><label><input type="radio" name="calendar-category" value="6"> 免费∙公开课</label></td>
+        <td style="background-color:#7231A6"><label><input type="radio" name="calendar-category" value="3"> Verbal百题斩–逻辑</label></td>
+        <td style="background-color: #999"><label><input type="radio" name="calendar-category" value="6"> 公开课</label></td>
         <td rowspan="3" style="background-color: #00BCD4"><label><input type="radio" name="calendar-category" value="7"> 线下面授班</label></td>
       </tr>
       <tr>
@@ -74,16 +74,16 @@
           <label><input type="radio" name="calendar-category" value="4"> Elite∙语法突破</label>
         </td>
         <td></td>
-        <td style="background-color:#E4A40B"><label><input type="radio" name="calendar-category" value="5"> 挑战700+|语法</label></td>
-        <td style="background-color:#999"><label><input type="radio" name="calendar-category" value="8"> 限时免费</label></td>
+        <td style="background-color:#E4A40B"><label><input type="radio" name="calendar-category" value="5"> Verbal百题斩–语法</label></td>
+		<td style="background-color:#999"><label><input type="radio" name="calendar-category" value="10"> 挑战700+</label></td>
       </tr>
       <tr>
         <td style="background-color:#266CDE">
           <label><input type="radio" name="calendar-category" value="0"> Elite∙数学冲刺</label>
         </td>
         <td></td>
-        <td style="background-color:#266CDE"><label><input type="radio" name="calendar-category" value="1"> 挑战700+|数学</label></td>
-        <td></td>
+        <td style="background-color:#266CDE"><label><input type="radio" name="calendar-category" value="1"> 数学百题斩</label></td>
+        <td style="background-color:#999"><label><input type="radio" name="calendar-category" value="8"> 限时免费</label></td>
       </tr>
     </tbody>
   </table>
