--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -5,7 +5,7 @@
       <p class="text-muted">建议大家考前一定要模考，推荐材料PREP>TN 24/770系列。模考请不要在意分数，关注点在整套模考的pace的把握以及找到适合自己可以应用到实战的考试节奏，其次再是正确率。本站模考还原仿真模考全过程，并且有ESR报告告知模考PACE和各科正确率，以及配有770团队独家撰写模考解析。</p>
       <div class="tabs">
         <a href="#gwd" class="active">GWD-TN-24系列</a>
-        <a href="#770">770系列</a>
+        <a href="#770">PREP系列</a>
       </div>
 
       <div data-exam-type="gwd" data-behavior="tab">
@@ -43,7 +43,7 @@
       </div>
 
       <div data-exam-type="770" data-behavior="tab" class="hidden">
-        <p class="text-muted">770模考系列是基于官方OG，manhattan 等教材以及770自身教研做出的新版模考，结合对考试趋势和机经的把握，给大家还原一个除了GWD之外的全新模考，以匹配当下的实战考试。</p>
+        <p class="text-muted">PREP 系列是官方 PREP 软件破解出来的题目，是目前为止最为接近实战的模考试题。770已配独家 PREP 解析。</p>
         <div class="exams clearfix mb2">
           <div class="container">
             <% @exams_770.each do |exam| %>
