fix qiniu paths

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -770,7 +770,7 @@ nav li a:hover, nav li a.active,
     border: 1px solid #ddd;
     color: #66aa00;
     border-bottom: 3px solid #66aa00;
-    background: url(http://7xtg0z.com2.z0.glb.clouddn.com/correct.png) 95% 95% no-repeat;
+    background: url(http://img2.gaofengo.com/correct.png) 95% 95% no-repeat;
     background-size: 8px 6px;
 
     &:hover {
@@ -780,7 +780,7 @@ nav li a:hover, nav li a.active,
     &.current {
       background-color: #66aa00;
       color: white;
-      background-image: url(http://7xtg0z.com2.z0.glb.clouddn.com/correct-white.png);
+      background-image: url(http://img2.gaofengo.com/correct-white.png);
 
       &:hover {
         background-color: #66aa00;
@@ -790,13 +790,13 @@ nav li a:hover, nav li a.active,
     &.wrong {
       border-bottom-color: #dd4477;
       color: #dd4477;
-      background: url(http://7xtg0z.com2.z0.glb.clouddn.com/wrong.png) 95% 95% no-repeat;
+      background: url(http://img2.gaofengo.com/wrong.png) 95% 95% no-repeat;
       background-size: 7px 7px;
 
       &.current {
         background-color: #dd4477;
         color: white;
-        background-image: url(http://7xtg0z.com2.z0.glb.clouddn.com/wrong-white.png);
+        background-image: url(http://img2.gaofengo.com/wrong-white.png);
 
         &:hover {
           background-color: #dd4477;
