--- a/app/views/admin/courses/_form.html.erb
+++ b/app/views/admin/courses/_form.html.erb
@@ -130,7 +130,7 @@
       </div>
       <div class="modal-body">
         <p>在浏览器里打开视频的页面，将下图红线标注内容复制到此页面相应输入框<br>目前只支持 QQ 视频</p>
-        <img src="http://7xtg0z.com2.z0.glb.clouddn.com/video_id.png" width="100%">
+        <img src="http://http://img2.gaofengo.com/video_id.png" width="100%">
       </div>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
