--- a/app/views/exams/_end_exam_dialog.html.erb
+++ b/app/views/exams/_end_exam_dialog.html.erb
@@ -4,7 +4,7 @@
     <i class="close"></i>
   </div>
   <div class="body">
-    <img src="http://oya5a097g.bkt.clouddn.com/warn.png" alt="" style="float: left;">
+    <img src="http://img.gaofengo.com/warn.png" alt="" style="float: left;">
     <div style="padding-left: 50px;">
       <p style="margin-top: 0">You are about to end your exam.<br/>If you click the Yes button below, your exam will end.</p>
       <p>Are you sure you want to end your exam?</p>
