--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -18,8 +18,8 @@
             <div class="left bg-white p2 mt2 mb2 clearfix mini-quiz">
               <h4><a href="http://www.mba.com/gmat-mini-quiz?utm_campaign=Global_All_Mini-Quiz_11Apr2016&utm_medium=referral&utm_source=gmat770" target="_blank">The GMAT mini quiz</a></h4>
               <a href="http://www.mba.com/gmat-mini-quiz?utm_campaign=Global_All_Mini-Quiz_11Apr2016&utm_medium=referral&utm_source=gmat770" target="_blank">
-                <img src="http://7xtg0z.com2.z0.glb.clouddn.com/verbal.png" width="40">
-                <img src="http://7xtg0z.com2.z0.glb.clouddn.com/quant.png" width="40">
+                <img src="http://img2.gaofengo.com/verbal.png" width="40">
+                <img src="http://img2.gaofengo.com/quant.png" width="40">
               </a>
             </div>
             <% @exams_gwd.each do |exam| %>
