--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
       <div class="clearfix container">
         <div class="left py1">
           <a href="/">
-            <img src="http://7xso19.com2.z0.glb.clouddn.com/logo.png" width="150" class="block" />
+            <img src="http://img2.gaofengo.com/logo.png" width="150" class="block" />
           </a>
         </div>
         <nav class="left ml2">
