--- a/app/views/temp_users/show.html.erb
+++ b/app/views/temp_users/show.html.erb
@@ -1,10 +1,10 @@
 <div class="header container">
-  <%= image_tag 'http://7xso19.com2.z0.glb.clouddn.com/logo.png', width: 150, class: 'block' %>
+  <%= image_tag 'http://img2.gaofengo.com/logo.png', width: 150, class: 'block' %>
 </div>
 
 <div class="container">
   <p class="text-center">
-    <%= image_tag 'http://oya5a097g.bkt.clouddn.com/check.png', width: 100 %>
+    <%= image_tag 'http://img.gaofengo.com/check.png', width: 100 %>
   </p>
   <p>您已经加入群：<%= @user_group.name %></p>
   <p class="text-muted">请在下次登录网站时绑定您的手机号</p>
