--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -21,7 +21,7 @@
 
       <div class="col col-4 p2">
         <div class="left mr2">
-          <img src="http://7xtg0z.com2.z0.glb.clouddn.com/1.png" width="180" height="120">
+          <img src="http://img2.gaofengo.com/1.png" width="180" height="120">
         </div>
         <h4>实力 + 经验</h4>
         <p>
@@ -29,7 +29,7 @@
         </p>
       </div><div class="col col-4 p2">
       <div class="left mr2">
-        <img src="http://7xtg0z.com2.z0.glb.clouddn.com/2.png" width="180" height="120">
+        <img src="http://img2.gaofengo.com/2.png" width="180" height="120">
       </div>
       <h4>定制 + 灵活</h4>
       <p>
@@ -37,7 +37,7 @@
       </p>
     </div><div class="col col-4 p2">
     <div class="left mr2">
-      <img src="http://7xtg0z.com2.z0.glb.clouddn.com/3.png" width="180" height="120">
+      <img src="http://img2.gaofengo.com/3.png" width="180" height="120">
     </div>
     <h4>专注 + 陪伴</h4>
     <p>
