--- a/app/assets/stylesheets/exams_controller.scss
+++ b/app/assets/stylesheets/exams_controller.scss
@@ -56,11 +56,11 @@ $yellow: #fefe00;
       }
 
       .clock i {
-        background: url(http://oya5a097g.bkt.clouddn.com/clock.png) center center no-repeat;
+        background: url(http://img.gaofengo.com/clock.png) center center no-repeat;
       }
 
       .location i {
-        background: url(http://oya5a097g.bkt.clouddn.com/location.png) center center no-repeat;
+        background: url(http://img.gaofengo.com/location.png) center center no-repeat;
       }
     }
   }
@@ -216,24 +216,24 @@ $yellow: #fefe00;
       width: 80px;
 
       i {
-        background-image: url(http://oya5a097g.bkt.clouddn.com/help.png);
+        background-image: url(http://img.gaofengo.com/help.png);
       }
     }
 
     .btn-help:hover i {
-      background-image: url(http://oya5a097g.bkt.clouddn.com/help-hover.png);
+      background-image: url(http://img.gaofengo.com/help-hover.png);
     }
 
     .btn-end {
       width: 130px;
 
       i {
-        background-image: url(http://oya5a097g.bkt.clouddn.com/quit.png);
+        background-image: url(http://img.gaofengo.com/quit.png);
       }
     }
 
     .btn-end:hover i {
-      background-image: url(http://oya5a097g.bkt.clouddn.com/quit-hover.png);
+      background-image: url(http://img.gaofengo.com/quit-hover.png);
     }
 
     .btn-skip {
@@ -244,12 +244,12 @@ $yellow: #fefe00;
       width: 82px;
 
       i {
-        background-image: url(http://oya5a097g.bkt.clouddn.com/next.png);
+        background-image: url(http://img.gaofengo.com/next.png);
       }
     }
 
     .btn-next:hover i {
-      background-image: url(http://oya5a097g.bkt.clouddn.com/next-hover.png);
+      background-image: url(http://img.gaofengo.com/next-hover.png);
     }
   }
 }
@@ -304,31 +304,31 @@ $yellow: #fefe00;
     }
 
     .toolbar-btn-cut i {
-      background-image: url(http://oya5a097g.bkt.clouddn.com/cut.png);
+      background-image: url(http://img.gaofengo.com/cut.png);
     }
     .toolbar-btn-copy i {
-      background-image: url(http://oya5a097g.bkt.clouddn.com/copy.png);
+      background-image: url(http://img.gaofengo.com/copy.png);
     }
     .toolbar-btn-paste i {
-      background-image: url(http://oya5a097g.bkt.clouddn.com/paste.png);
+      background-image: url(http://img.gaofengo.com/paste.png);
     }
     .toolbar-btn-redo i {
-      background-image: url(http://oya5a097g.bkt.clouddn.com/redo.png);
+      background-image: url(http://img.gaofengo.com/redo.png);
     }
     .toolbar-btn-cut:hover i {
-      background-image: url(http://oya5a097g.bkt.clouddn.com/cut-hover.png);
+      background-image: url(http://img.gaofengo.com/cut-hover.png);
     }
     .toolbar-btn-copy:hover i {
-      background-image: url(http://oya5a097g.bkt.clouddn.com/copy-hover.png);
+      background-image: url(http://img.gaofengo.com/copy-hover.png);
     }
     .toolbar-btn-paste:hover i {
-      background-image: url(http://oya5a097g.bkt.clouddn.com/paste-hover.png);
+      background-image: url(http://img.gaofengo.com/paste-hover.png);
     }
     .toolbar-btn-redo:hover i {
-      background-image: url(http://oya5a097g.bkt.clouddn.com/redo-hover.png);
+      background-image: url(http://img.gaofengo.com/redo-hover.png);
     }
     .toolbar-btn-undo.disable i {
-      background-image: url(http://oya5a097g.bkt.clouddn.com/undo-disable.png);
+      background-image: url(http://img.gaofengo.com/undo-disable.png);
     }
   }
 }
@@ -338,7 +338,7 @@ $yellow: #fefe00;
   vertical-align: bottom;
   width: 75px;
   height: 30px;
-  background: url(http://oya5a097g.bkt.clouddn.com/intr-icon.png) -89px -5px no-repeat;
+  background: url(http://img.gaofengo.com/intr-icon.png) -89px -5px no-repeat;
 }
 
 .intro-end-button {
@@ -346,7 +346,7 @@ $yellow: #fefe00;
   vertical-align: bottom;
   width: 116px;
   height: 30px;
-  background: url(http://oya5a097g.bkt.clouddn.com/intr-icon.png) -173px -5px no-repeat;
+  background: url(http://img.gaofengo.com/intr-icon.png) -173px -5px no-repeat;
 }
 
 .intro-page-button {
@@ -354,7 +354,7 @@ $yellow: #fefe00;
   vertical-align: bottom;
   width: 100px;
   height: 30px;
-  background: url(http://oya5a097g.bkt.clouddn.com/intr-icon.png) -300px -5px no-repeat;
+  background: url(http://img.gaofengo.com/intr-icon.png) -300px -5px no-repeat;
 }
 
 .intro-clock-button {
@@ -362,7 +362,7 @@ $yellow: #fefe00;
   vertical-align: bottom;
   width: 38px;
   height: 30px;
-  background: url(http://oya5a097g.bkt.clouddn.com/intr-icon.png) -405px -5px no-repeat;
+  background: url(http://img.gaofengo.com/intr-icon.png) -405px -5px no-repeat;
 }
 
 .intro-book-button {
@@ -370,7 +370,7 @@ $yellow: #fefe00;
   vertical-align: bottom;
   width: 38px;
   height: 30px;
-  background: url(http://oya5a097g.bkt.clouddn.com/intr-icon.png) -5px -85px no-repeat;
+  background: url(http://img.gaofengo.com/intr-icon.png) -5px -85px no-repeat;
 }
 
 .intro-help-button {
@@ -378,7 +378,7 @@ $yellow: #fefe00;
   vertical-align: bottom;
   width: 75px;
   height: 30px;
-  background: url(http://oya5a097g.bkt.clouddn.com/intr-icon.png) -5px -5px no-repeat;
+  background: url(http://img.gaofengo.com/intr-icon.png) -5px -5px no-repeat;
 }
 
 .intro-cut-button {
@@ -386,7 +386,7 @@ $yellow: #fefe00;
   vertical-align: bottom;
   width: 64px;
   height: 30px;
-  background: url(http://oya5a097g.bkt.clouddn.com/intr-icon.png) -5px -45px no-repeat;
+  background: url(http://img.gaofengo.com/intr-icon.png) -5px -45px no-repeat;
 }
 
 .intro-copy-button {
@@ -394,7 +394,7 @@ $yellow: #fefe00;
   vertical-align: bottom;
   width: 80px;
   height: 30px;
-  background: url(http://oya5a097g.bkt.clouddn.com/intr-icon.png) -85px -45px no-repeat;
+  background: url(http://img.gaofengo.com/intr-icon.png) -85px -45px no-repeat;
 }
 
 .intro-paste-button {
@@ -402,7 +402,7 @@ $yellow: #fefe00;
   vertical-align: bottom;
   width: 84px;
   height: 30px;
-  background: url(http://oya5a097g.bkt.clouddn.com/intr-icon.png) -175px -45px no-repeat;
+  background: url(http://img.gaofengo.com/intr-icon.png) -175px -45px no-repeat;
 }
 
 .intro-undo-button {
@@ -410,7 +410,7 @@ $yellow: #fefe00;
   vertical-align: bottom;
   width: 84px;
   height: 30px;
-  background: url(http://oya5a097g.bkt.clouddn.com/intr-icon.png) -270px -45px no-repeat;
+  background: url(http://img.gaofengo.com/intr-icon.png) -270px -45px no-repeat;
 }
 
 .intro-redo-button {
@@ -418,7 +418,7 @@ $yellow: #fefe00;
   vertical-align: bottom;
   width: 84px;
   height: 30px;
-  background: url(http://oya5a097g.bkt.clouddn.com/intr-icon.png) -365px -45px no-repeat;
+  background: url(http://img.gaofengo.com/intr-icon.png) -365px -45px no-repeat;
 }
 
 .dialog {
@@ -446,7 +446,7 @@ $yellow: #fefe00;
     width: 16px;
     height: 39px;
     float: right;
-    background: url(http://oya5a097g.bkt.clouddn.com/close.png) center center no-repeat;
+    background: url(http://img.gaofengo.com/close.png) center center no-repeat;
     cursor: pointer;
   }
 
