--- a/app/views/user_groups/join.html.erb
+++ b/app/views/user_groups/join.html.erb
@@ -1,5 +1,5 @@
 <div class="header container">
-  <%= image_tag 'http://7xso19.com2.z0.glb.clouddn.com/logo.png', width: 150, class: 'block' %>
+  <%= image_tag 'http://img2.gaofengo.com/logo.png', width: 150, class: 'block' %>
 </div>
 
 <div class="text-center dark container">
