show mobile in user profile

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
         <% if @user.mobile.blank? %>
           <span>未绑定</span>
         <% else %>
-          <span>已绑定</span>
+          <span>已绑定(<%= mask_mobile_number(@user.mobile) %>)</span>
         <% end %>
       </div>
     </div>
